Discrete animation of content property does not work https://bugs.webkit.org/show_bug.cgi?id=183544 LayoutTests/imported/w3c:

<rdar://problem/38360395>

Reviewed by Antti Koivisto.

Add a new test to check that we can animate the "content" property using a discrete animation.

* web-platform-tests/css/css-content/content-animation-expected.txt: Added.
* web-platform-tests/css/css-content/content-animation.html: Added.

Source/WebCore:

Reviewed by Antti Koivisto.

Test: imported/w3c/web-platform-tests/css/css-content/content-animation.html

Add support for animating the "content" property.

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* rendering/style/RenderStyle.h:


Canonical link: https://commits.webkit.org/243979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285423 268f45cc-cd09-0410-ab3c-d52691b4dbfc