Source/WebCore/rendering/style/RenderStyle.h
@@ -1474,6 +1474,7 @@ public:
 
     bool hasContent() const { return contentData(); }
     const ContentData* contentData() const { return m_rareNonInheritedData->content.get(); }
+    void setContent(std::unique_ptr<ContentData>, bool add);
     bool contentDataEquivalent(const RenderStyle* otherStyle) const { return const_cast<RenderStyle*>(this)->m_rareNonInheritedData->contentDataEquivalent(*const_cast<RenderStyle*>(otherStyle)->m_rareNonInheritedData); }
     void clearContent();
     void setHasExplicitlyClearedContent(bool v) { m_nonInheritedFlags.hasExplicitlyClearedContent = v; }
@@ -1994,8 +1995,6 @@ private:
 
     bool hasAutoLeftAndRight() const { return left().isAuto() && right().isAuto(); }
     bool hasAutoTopAndBottom() const { return top().isAuto() && bottom().isAuto(); }
-
-    void setContent(std::unique_ptr<ContentData>, bool add);
 
     static bool isDisplayReplacedType(DisplayType);
     static bool isDisplayInlineType(DisplayType);
